[package]
name = "rcli"
version = "0.1.0"
authors = ["Simon<ynwdlxm@163.com>"]
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
base64 = "0.22.1"
clap = { version = "4.5.7", features = ["derive"] }
csv = "1.3.0"
rand = "0.8.5"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.118"
serde_yml = "0.0.10"
zxcvbn = "3.0.1" # zxcvbn is a password strength estimator based off of Dropbox’s zxcvbn library.
